[gd_scene load_steps=7 format=3 uid="uid://nelkrs6o10dy"]

[ext_resource type="Script" path="res://projects/vam-pirate_ship-vivors_2/damage_arena/spawn_ui.gd" id="1_g532p"]
[ext_resource type="Texture2D" uid="uid://onm5xeg5u5wu" path="res://resources/shader_particles/orb1.png" id="2_7g3f1"]
[ext_resource type="PackedScene" uid="uid://bnodi31vhdku8" path="res://projects/vam-pirate_ship-vivors_2/enemies/magnetic_mine.tscn" id="2_bgjbt"]
[ext_resource type="PackedScene" uid="uid://vwlkff015x7e" path="res://projects/vam-pirate_ship-vivors_2/player.tscn" id="4_msigs"]
[ext_resource type="PackedScene" uid="uid://cxv8ea5o2yvi4" path="res://projects/vam-pirate_ship-vivors_2/ship_parts/battle_boat.tscn" id="5_dbqgg"]
[ext_resource type="PackedScene" uid="uid://daf3n6gi64yqh" path="res://projects/vam-pirate_ship-vivors_2/ship_parts/guns/arrow_launcher.tscn" id="6_kaulo"]

[node name="DamageArena" type="Node2D"]

[node name="SpawnUI" type="CanvasLayer" parent="." node_paths=PackedStringArray("spawn_point")]
script = ExtResource("1_g532p")
enemy_list = Array[PackedScene]([ExtResource("2_bgjbt")])
spawn_point = NodePath("../SpawnPoint")

[node name="Back" type="ColorRect" parent="SpawnUI"]
custom_minimum_size = Vector2(140, 0)
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
color = Color(0.239216, 0.239216, 0.239216, 0.6)

[node name="Layout" type="VBoxContainer" parent="SpawnUI/Back"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EnemySection" type="VBoxContainer" parent="SpawnUI/Back/Layout"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="SpawnUI/Back/Layout/EnemySection"]
layout_mode = 2
text = "Enemy Stuff"

[node name="ColorRect3" type="ColorRect" parent="SpawnUI/Back/Layout/EnemySection"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="SpawnEnemy" type="Button" parent="SpawnUI/Back/Layout/EnemySection"]
layout_mode = 2
text = "Spawn"

[node name="ColorRect2" type="ColorRect" parent="SpawnUI/Back/Layout/EnemySection"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="Label3" type="Label" parent="SpawnUI/Back/Layout/EnemySection"]
layout_mode = 2
text = "Type"

[node name="EnemySelector" type="OptionButton" parent="SpawnUI/Back/Layout/EnemySection"]
unique_name_in_owner = true
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="SpawnUI/Back/Layout/EnemySection"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="Label2" type="Label" parent="SpawnUI/Back/Layout/EnemySection"]
layout_mode = 2
text = "Amount"

[node name="SpawnCount" type="LineEdit" parent="SpawnUI/Back/Layout/EnemySection"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "1"

[node name="PlayerSection" type="VBoxContainer" parent="SpawnUI/Back/Layout"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="SpawnUI/Back/Layout/PlayerSection"]
layout_mode = 2
text = "Player stuff"

[node name="ColorRect4" type="ColorRect" parent="SpawnUI/Back/Layout/PlayerSection"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="SpawnPlayer" type="Button" parent="SpawnUI/Back/Layout/PlayerSection"]
layout_mode = 2
text = "ReSpawn"

[node name="SpawnPoint" type="Node2D" parent="."]
position = Vector2(904, 360)

[node name="Orb1" type="Sprite2D" parent="SpawnPoint"]
modulate = Color(1, 0.270588, 0.384314, 1)
texture = ExtResource("2_7g3f1")

[node name="Player" parent="." instance=ExtResource("4_msigs")]
position = Vector2(473, 224)

[node name="BattleBoat" parent="Player" instance=ExtResource("5_dbqgg")]

[node name="ArrowLauncher" parent="." node_paths=PackedStringArray("target") instance=ExtResource("6_kaulo")]
position = Vector2(718, 672)
target = NodePath("../Player")

[node name="Timer" type="Timer" parent="ArrowLauncher"]
wait_time = 0.3
autostart = true

[node name="FireArrow" type="Button" parent="."]
offset_left = 987.0
offset_top = 523.0
offset_right = 1072.0
offset_bottom = 554.0
text = "fire arrow"

[connection signal="pressed" from="SpawnUI/Back/Layout/EnemySection/SpawnEnemy" to="SpawnUI" method="_on_spawn_enemy_pressed"]
[connection signal="timeout" from="ArrowLauncher/Timer" to="ArrowLauncher" method="_on_timer_timeout"]
[connection signal="pressed" from="FireArrow" to="ArrowLauncher" method="_on_fire_arrow_pressed"]
